fix: V-002 security vulnerability
Automated security fix generated by Orbis Security AI